--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 ---
 abstract: 'Math is HARD (faster!)'
 author:
-  - 'Ingy dÃ¶t Net <ingy@cpan.org>'
+  - 'Ingy döt Net <ingy@cpan.org>'
 build_requires:
   ExtUtils::MakeMaker: '0'
 configure_requires:
@@ -20,4 +20,4 @@ no_index:
     - lib/Acme
 requires:
   perl: '5.008001'
-version: v0.0.1
+version: v0.0.2
